Fixed tags in reports breaking the layout Fixed data tables in reports, where they were not showing previously

--- a/afor-cucumber/src/main/resources/nz/co/afor/reports/formatter/style.css
+++ b/afor-cucumber/src/main/resources/nz/co/afor/reports/formatter/style.css
@@ -171,11 +171,11 @@ span.title-heading-date {
     border-bottom-right-radius: 5px;
 }
 
-.afor-report table.data_table tbody tr:first-child td:first-child {
+.afor-report table.data_table tr:first-child th:first-child {
     border-top-left-radius: 5px;
 }
 
-.afor-report table.data_table tbody tr:first-child td:last-child {
+.afor-report table.data_table tr:first-child th:last-child {
     border-top-right-radius: 5px;
 }
 
@@ -277,7 +277,8 @@ section.blockelement.scenario, section.blockelement.background {
 }
 
 .afor-report .tags {
-    display: inline;
+    overflow: hidden;
+    text-overflow: ellipsis;
     font-weight: bold;
 }
 
@@ -331,10 +332,11 @@ span.duration, span.startTime {
     float:right;
     padding-left: 5px;
     padding-right: 5px;
-    min-width: 120px;
+    min-width: 135px;
     text-align: right;
     clear:left;
 }
+
 span.duration.long {
     font-weight: bold;
 }
